Bug Fix - Menu button Menu button is now visible up to 767px screen width (changed from 736px)

--- a/web-application/angular/src/app/home/home.component.css
+++ b/web-application/angular/src/app/home/home.component.css
@@ -493,7 +493,3 @@ li.anim3 {
     padding-bottom: 3.5em;
   }
 }
-
-@media(max-width: 991px) {
-  /* /// */
-}
